# Othello_Server

./: .gitignore  Book.cpp  Book.hpp  CMakeLists.txt  board.cpp  board.hpp  eval.cpp  eval.h  fullsearch.cpp  fullsearch.hpp  main.cpp  uct.cpp  uct.hpp
